--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,13 +1,25 @@
 server {
     listen 80;
     server_name _;
+    rewrite ^(.*)$  https://$host$1 permanent;
 
+}
+server {
+    #listen 80;
+    #server_name _
+    listen      443 ssl;
+    server_name www.iqianqian.club;
+    ssl_certificate     /etc/nginx/conf.d/cert/www/www.iqianqian.club.pem;
+    ssl_certificate_key /etc/nginx/conf.d/cert/www/www.iqianqian.club.key;
+    ssl_session_timeout 5m;
+    ssl_protocols       TLSv1.2 TLSv1.3 SSLv2 SSLv3;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE;
+    ssl_prefer_server_ciphers on;
     location /console/api {
       proxy_pass http://api:5001;
       include proxy.conf;
     }
-
-    location /api {
+location /api {
       proxy_pass http://api:5001;
       include proxy.conf;
     }
@@ -23,7 +35,36 @@ server {
     }
 
     location / {
-      proxy_pass http://web:3000;
+      if ($host = 'www.iqianqian.club' ) {
+          proxy_pass http://web:3000; break;
+      }
+      if ($host = 'next.iqianqian.club' ) {
+          proxy_pass http://nextweb:3000; break;
+      }
       include proxy.conf;
+
     }
+
+}
+server {
+    #listen 80;
+    #server_name _
+    listen      443 ssl;
+    server_name next.iqianqian.club;
+    ssl_certificate     /etc/nginx/conf.d/cert/next/next.iqianqian.club.pem;
+    ssl_certificate_key /etc/nginx/conf.d/cert/next/next.iqianqian.club.key;
+    ssl_session_timeout 5m;
+    ssl_protocols       TLSv1.2 TLSv1.3 SSLv2 SSLv3;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE;
+    location / {
+      if ($host = 'www.iqianqian.club' ) {
+          proxy_pass http://web:3000; break;
+      }
+      if ($host = 'next.iqianqian.club' ) {
+          proxy_pass http://nextweb:3000; break;
+      }
+      include proxy.conf;
+
+    }
+
 }
